contant submit button mobile fix attempt #1

--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -63,6 +63,7 @@
   padding: 0.75rem 3.5rem;
   border-radius: 0.75rem;
   margin: 1.5rem;
+  color: black;
 }
 
 .form-complete {
